force-app/main/default/objects/custom_create133__c/custom_create133__c.object-meta.xml
<CustomObject>
    <label>Custom created object133</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects133</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>