force-app/main/default/objects/custom_create133__c/fields/custom_create_133field624__c.field-meta.xml
<CustomField>
    <fullName>custom_create_133field624__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 133field624</label>
    <type>Checkbox</type>
</CustomField>